[package]
name = "rust-br"
version = "0.2.1"
edition = "2024"
authors = ["Thiago C H Moreira <thiagochm@gmail.com>"]
description = "Crate de Validadores para Documentos Brasileiros"
license = "MIT"
repository = "https://github.com/ThiagoCHM/rust-br"
documentation = "https://github.com/ThiagoCHM/rust-br/blob/main/README.md"
homepage = "https://github.com/ThiagoCHM/rust-br"

[dependencies]
